View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026276 | Open CASCADE | OCCT:Visualization | public | 2015-05-27 14:52 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | ||||
Product Version | 6.8.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026276: Visualization, TKOpenGl - add missing Standard_EXPORT to matrix management methods in OpenGl_Context | ||||
Description | It is necessary to add Standard_EXPORT macro to some of OpenGl_Context's methods, e.g.: * OpenGl_Context::ApplyProjectionMatrix(); * OpenGl_Context::ApplyWorldViewMatrix(). | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26276 has been created by omy. SHA-1: 10da1cbf75ce1502102259cda1e98171e2c517eb Detailed log of new commits: Author: omy Date: Thu May 28 10:27:24 2015 +0300 0026276: Visualization, TKOpenGl - add missing Standard_EXPORT to matrix management methods in OpenGl_Context These methods are useful for applying matrices transformations. |
|
Dear Kirill, Please, verify the changes made by branch CR26276. |
|
Please check compilation, no need for regression testing. |
|
Branch CR26276 has been updated forcibly by mkv. SHA-1: 0cb0a3882bbdeff9d7a84a6285e5582a2f3cd775 |
|
Dear BugMaster, Branch CR26276 was rebased on IR-2015-05-28 branch of occt git-repository. SHA-1: 0cb0a3882bbdeff9d7a84a6285e5582a2f3cd775 |
|
Dear BugMaster, Branch CR26276 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 0cb0a3882bbdeff9d7a84a6285e5582a2f3cd775 Number of compiler warnings: occt component : Linux: 25 (25 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) |
|
Branch CR26276 has been deleted by kgv. SHA-1: 0cb0a3882bbdeff9d7a84a6285e5582a2f3cd775 |
occt: master 5e94009d 2015-05-28 07:27:24
Committer: bugmaster Details Diff |
0026276: Visualization, TKOpenGl - add missing Standard_EXPORT to matrix management methods in OpenGl_Context These methods are useful for applying matrices transformations. |
Affected Issues 0026276 |
|
mod - src/OpenGl/OpenGl_Context.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-05-27 14:52 |
|
New Issue | |
2015-05-27 14:52 |
|
Assigned To | => kgv |
2015-05-28 10:07 | kgv | Severity | minor => trivial |
2015-05-28 10:07 | kgv | Platform | => Windows |
2015-05-28 10:07 | kgv | Product Version | 7.0.0 => 6.8.0 |
2015-05-28 10:07 | kgv | Summary | Some OpenGl_Context functions should be exported. => Visualization, TKOpenGl - add missing Standard_EXPORT to matrix management methods in OpenGl_Context |
2015-05-28 10:24 | kgv | Assigned To | kgv => omy |
2015-05-28 10:24 | kgv | Status | new => assigned |
2015-05-28 10:27 | git | Note Added: 0041632 | |
2015-05-28 10:29 |
|
Note Added: 0041633 | |
2015-05-28 10:29 |
|
Assigned To | omy => kgv |
2015-05-28 10:29 |
|
Status | assigned => resolved |
2015-05-28 10:29 |
|
Steps to Reproduce Updated | |
2015-05-28 10:57 | kgv | Note Added: 0041634 | |
2015-05-28 10:57 | kgv | Assigned To | kgv => bugmaster |
2015-05-28 10:57 | kgv | Status | resolved => reviewed |
2015-05-28 18:19 | git | Note Added: 0041685 | |
2015-05-28 18:36 |
|
Assigned To | bugmaster => mkv |
2015-05-29 12:18 | kgv | Relationship added | related to 0024381 |
2015-05-29 14:58 |
|
Note Added: 0041730 | |
2015-05-29 14:58 |
|
Note Added: 0041731 | |
2015-05-29 14:58 |
|
Assigned To | mkv => bugmaster |
2015-05-29 14:58 |
|
Status | reviewed => tested |
2015-05-29 14:58 |
|
Test case number | => Not needed |
2015-06-05 15:00 | bugmaster | Changeset attached | => occt master 5e94009d |
2015-06-05 15:00 | bugmaster | Status | tested => verified |
2015-06-05 15:00 | bugmaster | Resolution | open => fixed |
2015-07-27 13:34 | git | Note Added: 0043507 | |
2015-08-17 10:05 | kgv | Relationship added | related to 0026403 |
2015-08-26 11:11 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |